# log-watcher

./: .gitignore  README.md  main.js  package-lock.json  package.json  pm2_start.json  pm2http.js  t.js
lib/: emitter.js  index.js
native/: Cargo.toml
native/src/: lib.rs
