[package]
name = "log-watcher"
version = "0.1.0"
authors = ["ttang <atory_cc>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "log_watcher"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.1"

[dependencies]
neon = "0.7.1"
crossbeam-channel = "0.5.0"
notify = { version = "5.0.0-pre.5", features = ["serde"] }
